BUGFIX: added visible overflow and clearfix to header bar on Page.ss (language picker was cut after 5 different languages)

--- a/css/screen/custom/SilvercartGeneral.css
+++ b/css/screen/custom/SilvercartGeneral.css
@@ -98,6 +98,12 @@ h1 {
 .padding_right {
     padding-right:                  12px;
 }
+.overflow-visible {
+    overflow:                     visible;
+}
+.position-relative {
+    position:                     relative;
+}
 
 .page {
     background:                     #fff;
